--- a/lib/editor/tiny/plugins/recordrtc/templates/insert_recording.mustache
+++ b/lib/editor/tiny/plugins/recordrtc/templates/insert_recording.mustache
@@ -24,10 +24,10 @@
 
     }
 }}
-<div class="{{PLUGINNAME}} container-fluid">
-    <div class="{{bsrow}} hide">
-        <div class="{{bscol}}12">
-            <div id="alert-danger" class="alert {{bsaldang}}">
+<div class="tiny_recordrtc container-fluid">
+    <div  data-purpose="security-warning" class="row hide">
+        <div class="col-12">
+            <div id="alert-danger" class="alert alert-danger">
                 <strong>
                     {{#str}} insecurealerttitle, tiny_recordrtc {{/str}}
                 </strong>
@@ -35,36 +35,36 @@
             </div>
         </div>
     </div>
-    <div class="{{bsrow}} hide">
+    <div data-purpose="player-container" class="row hide">
         {{#isaudio}}
-            <div class="{{bscol}}1"></div>
-            <div class="{{bscol}}10">
+            <div class="col-1"></div>
+            <div class="col-10">
                 <audio id="player"></audio>
             </div>
-            <div class="{{bscol}}1"></div>
+            <div class="col-1"></div>
         {{/isaudio}}
         {{^isaudio}}
-            <div class="{{bscol}}12">
+            <div class="col-12">
                 <video id="player"></video>
             </div>
         {{/isaudio}}
     </div>
-    <div class="{{bsrow}}">
-        <div class="{{bscol}}1"></div>
-        <div class="{{bscol}}10">
-            <button id="start-stop" class="{{bsssbtn}}">
+    <div data-purpose="start-stop-container" class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <button id="start-stop" class="btn btn-lg btn-outline-danger btn-block" data-action-"startstop">
                 {{#str}} startrecording, tiny_recordrtc {{/str}}
             </button>
         </div>
-        <div class="{{bscol}}1"></div>
+        <div class="col-1"></div>
     </div>
-    <div class="{{bsrow}} hide">
-        <div class="{{bscol}}3"></div>
-        <div class="{{bscol}}6">
-            <button id="upload" class="btn btn-primary btn-block">
+    <div data-purpose="attach-container" class="row hide">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <button id="upload" class="btn btn-primary btn-block" data-action-"attach">
                 {{#str}} attachrecording, tiny_recordrtc {{/str}}
             </button>
         </div>
-        <div class="{{bscol}}3"></div>
+        <div class="col-3"></div>
     </div>
 </div>
