--- a/lib/editor/tiny/plugins/recordrtc/templates/video_recorder.mustache
+++ b/lib/editor/tiny/plugins/recordrtc/templates/video_recorder.mustache
@@ -61,9 +61,9 @@
             <div class="col-1"></div>
         </div>
         <div data-purpose="upload-container" class="row hide">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <button class="btn btn-primary btn-block" data-action="upload">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <button class="btn btn-lg btn-primary btn-block" data-action="upload">
                     {{#str}} attachrecording, tiny_recordrtc {{/str}}
                 </button>
             </div>
