--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -18652,6 +18652,37 @@ p.arrow_button {
   outline: 0.2rem solid black;
   box-shadow: inset 0 0 0 2px #343a40; }
 
+.btn-to-link {
+  display: inline-block; }
+  .btn-to-link form button {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    color: #0f6cbf;
+    text-align: left;
+    margin-top: -3px;
+    font-style: inherit; }
+  .btn-to-link form button:focus {
+    background-color: transparent;
+    border-radius: 1px; }
+  .btn-to-link form button:active,
+  .btn-to-link form button:not(:disabled):not(.disabled):active,
+  .btn-to-link form button:not(:disabled):not(.disabled):active:focus {
+    background-color: transparent;
+    outline: none;
+    box-shadow: none;
+    border-color: transparent;
+    color: #094478; }
+  .btn-to-link form button:not(:active),
+  .btn-to-link form button:not(:active:focus) {
+    color: #0f6cbf; }
+  .btn-to-link form button:hover,
+  .btn-to-link form button:not(:active):hover,
+  .btn-to-link form button:not(:active:focus):hover {
+    background-color: transparent;
+    text-decoration: underline;
+    color: #094478; }
+
 .gradetreebox h4 {
   font-size: 0.9375rem; }
 
